# hgh

./: Dockerfile  Makefile.am  README.md  configure.ac
balde/src/: httpd.c
balde/src/.deps/: libbalde_la-app.Plo  libbalde_la-cgi.Plo  libbalde_la-datetime.Plo  libbalde_la-exceptions.Plo  libbalde_la-httpd.Plo  libbalde_la-multipart.Plo  libbalde_la-multipart_parser.Plo  libbalde_la-requests.Plo  libbalde_la-resources.Plo  libbalde_la-responses.Plo  libbalde_la-routing.Plo  libbalde_la-scgi.Plo  libbalde_la-sessions.Plo  libbalde_la-template-helpers.Plo  libbalde_la-utils.Plo
balde/src/quickstart/.deps/: balde_quickstart-balde-quickstart.Po  libbalde_quickstart_la-project.Plo  libbalde_quickstart_la-quickstart.Plo
balde/src/template/: parser-grammar.c
balde/src/template/.deps/: balde_template_gen-balde-template-gen.Po  libbalde_template_la-parser-grammar.Plo  libbalde_template_la-parser.Plo  libbalde_template_la-template.Plo
src/: main.c
src/.deps/: hgh-main.Po  libfoo_la-db.Plo  libfoo_la-foo.Plo  libfoo_la-kissdb.Plo
src/backup/static/: resources.c  screen.css
src/backup/templates/.deps/: hgh-base.Po
src/static/.deps/: hgh-resources.Po
src/templates/: base.c  base.h
